cmake_minimum_required(VERSION 3.16)
project(KleeTool)

set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(Threads)

SET(BOOST_ROOT /home/zode/Software/boost_1_75_0/)
SET(Boost_NO_SYSTEM_PATHS ON)
FIND_PACKAGE(Boost 1.75.0)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})

    MESSAGE( STATUS "Boost_INCLUDE_DIRS = ${Boost_INCLUDE_DIRS}.")
    MESSAGE( STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}.")
    MESSAGE( STATUS "Boost_LIB_VERSION = ${Boost_LIB_VERSION}.")

endif()


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_FILES)

ADD_EXECUTABLE(KleeTool ${SRC_FILES})

TARGET_LINK_LIBRARIES(KleeTool ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})